# panel-decode

./: .clang-format  CMakeLists.txt
src/: panel-decoder.c  panel-simple.c  panel-simple.h
